fixed overflow text

--- a/style.css
+++ b/style.css
@@ -8,9 +8,13 @@ body {
 .btn-blue {
    background-color: rgba(37, 99, 235, 1);
 }
-.w-space {
-   white-space: nowrap;
+
+@media(min-width:768px) {
+   .w-space{
+      white-space: nowrap;
+   }
 }
+
 .bg-gray-800 {
    --tw-bg-opacity: 1;
    background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
@@ -49,17 +53,21 @@ body {
    color: white !important;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 768px) {
    .sm\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
       --tw-space-y-reverse: 0;
       margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
       margin-bottom: calc(0px * var(--tw-space-y-reverse));
    }
 }
+
+.sender{
+   max-width: 25rem;
+   margin-inline: auto;
+}
 .newslett {
    max-width: 50rem;
-   margin-right: auto;
-   margin-left: auto;
+   margin-inline: auto;
 }
 .h-5 {
    height: 5rem;
@@ -67,11 +75,12 @@ body {
 .w-5 {
    width: 5rem;
 }
-.w-2 {
+.s-2 {
    width: 2rem;
+   height: 2rem;
 }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 576px) {
    .w-md-25 {
       width: 50%;
    }
